Revert "updates the lein install script"
This reverts commit 8e76578d786f30486408275654858b2941902163.